--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,14 @@
     text-align:center
 }
 
+#title{
+    font-family:fantasy
+}
+
 .center {
     text-align: center
+}
+
+.center{
+    font-family:sans-serif, "Times New Roman"
 }
