added text align to body, added fontfamily to titleone/two/three

--- a/recipes/soupstyles.css
+++ b/recipes/soupstyles.css
@@ -1,3 +1,11 @@
 #maintitle {
     background-color:chocolate
 }
+
+.center {
+    text-align:center
+}
+
+.titleone, .titletwo, .titlethree {
+    font-family:fantasy
+}
