added body background cornflowerblue color

--- a/recipes/soupstyles.css
+++ b/recipes/soupstyles.css
@@ -6,6 +6,10 @@
     text-align:center
 }
 
+.center {
+    background-color:cornflowerblue
+}
+
 .titleone, .titletwo, .titlethree {
     font-family:fantasy
 }
