reconfig #title layout

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,6 @@
 #title{
-    background-color:brown
-}
-
-#title{
-    text-align:center
-}
-
-#title{
+    background-color:brown;
+    text-align:center;
     font-family:fantasy
 }
 
